Extended services, docker advanced setup, WSL configuration, linter

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -2,6 +2,7 @@
 
 [defaults]
 allow_world_readable_tmpfiles = true
+ansible_python_interpreter = python3
 command_warnings = false
 deprecation_warnings = false
 display_skipped_hosts = false
