--- a/roles/ssh/tasks/main.yml
+++ b/roles/ssh/tasks/main.yml
@@ -25,7 +25,7 @@
 - name: Configure {{ role_name }} from template
   template:
     src: wsl_config.conf.j2
-    dest: /etc/ssh/sshd_config.d/wsl_config.conf
+    dest: /etc/ssh/sshd_config
     validate: "{{ sshd_binary }} -t -f %s"
 
 - name: Add {{ role_name }} authorized keys
