--- a/roles/ssh/defaults/main.yml
+++ b/roles/ssh/defaults/main.yml
@@ -3,6 +3,7 @@ ssh_keys:
   - id_rsa
 sshd_binary: /usr/sbin/sshd
 sshd_pid_path: /run/sshd
+sshd_config_path: /etc/ssh/sshd_config.d
 debian_packages:
   - ssh
 alpine_packages:
