--- a/roles/fish/tasks/main.yml
+++ b/roles/fish/tasks/main.yml
@@ -46,7 +46,7 @@
     - starship.toml
     - fish/config.fish
     - fish/fish_variables
-    - fish/fish_variables
+    - fish/fishfile
   loop_control:
     loop_var: config_file
 
