--- a/roles/jvm/tasks/main.yml
+++ b/roles/jvm/tasks/main.yml
@@ -5,7 +5,7 @@
 
 - name: Download {{ role_name }} SDK manager installer script
   get_url:
-    url: https://get.sdkman.io
+    url: "{{ sdkman_url }}"
     dest: /tmp/sdkman.sh
     mode: a+x
   notify: sdkman
