--- a/roles/kubernetes/tasks/main.yml
+++ b/roles/kubernetes/tasks/main.yml
@@ -2,6 +2,6 @@
 - name: Install {{ role_name }} client
   get_url:
     url: https://storage.googleapis.com/kubernetes-release/release/v{{ kubernetes_version }}/bin/linux/amd64/kubectl
-    dest: /usr/bin/
+    dest: /usr/local/bin/
     mode: a+x
     force: true
