--- a/roles/docker/defaults/main.yml
+++ b/roles/docker/defaults/main.yml
@@ -6,3 +6,7 @@ docker_registry_htpasswd: "{{ docker_registry_username }}:$2y$05$gHSPPUG5HCjVxfZ
 docker_registry_htpasswd_path: "/root/.docker/htpasswd"
 docker_packages:
   - docker-ce
+hadolint_version: 1.18.0
+hadolint_url: https://github.com/hadolint/hadolint/releases/download/v{{ hadolint_version }}/hadolint-Linux-x86_64
+container_structure_test_version: 1.8.0
+container_structure_test_url: https://storage.googleapis.com/container-structure-test/v{{ container_structure_test_version }}/container-structure-test-linux-amd64
