--- a/roles/php/defaults/main.yml
+++ b/roles/php/defaults/main.yml
@@ -1,4 +1,4 @@
-php_version: '7.4'
+php_version: 7.4
 php_packages:
   - php-apcu
   - php-cli
@@ -13,8 +13,6 @@ php_packages:
   - php-mbstring
   - php-memcached
   - php-mysql
-  - php-opcache
-  - php-pdo
   - php-sqlite3
   - php-xml
   - php-zip
