--- a/roles/terraform/defaults/main.yml
+++ b/roles/terraform/defaults/main.yml
@@ -1,2 +1,3 @@
-terraform_version: 0.13.0-beta2
+terraform_version: 0.12.28
+terraform_url: https://releases.hashicorp.com/terraform/{{ terraform_version }}/terraform_{{ terraform_version }}_linux_amd64.zip
 bin_dir: /usr/local/bin
