--- a/roles/terraform/tasks/main.yml
+++ b/roles/terraform/tasks/main.yml
@@ -1,7 +1,7 @@
 ---
 - name: Install {{ role_name }} v{{ terraform_version }}
   unarchive:
-    src: https://releases.hashicorp.com/terraform/{{ terraform_version }}/terraform_{{ terraform_version }}_linux_amd64.zip
+    src: "{{ terraform_url }}"
     remote_src: true
     dest: "{{ bin_dir }}"
     creates: "{{ bin_dir }}/terraform"
