--- a/roles/skaffold/defaults/main.yml
+++ b/roles/skaffold/defaults/main.yml
@@ -1,2 +1,5 @@
 skaffold_version: 1.12.0
 skaffold_url: https://storage.googleapis.com/skaffold/releases/v{{ skaffold_version }}/skaffold-linux-amd64
+container_structure_test_version: 1.8.0
+container_structure_test_url: https://storage.googleapis.com/container-structure-test/v{{ container_structure_test_version }}/container-structure-test-linux-amd64
+bin_dir: /usr/local/bin
