--- a/roles/terraform/tasks/main.yml
+++ b/roles/terraform/tasks/main.yml
@@ -3,6 +3,5 @@
   unarchive:
     src: "{{ terraform_url }}"
     remote_src: true
-    dest: "{{ bin_dir }}"
-    creates: "{{ bin_dir }}/terraform"
+    dest: /usr/local/bin/terraform
     mode: a+x
