--- a/roles/helm/defaults/main.yml
+++ b/roles/helm/defaults/main.yml
@@ -2,3 +2,4 @@ helm_version: 3.2.4
 helm_url: https://get.helm.sh/helm-v{{ helm_version }}-linux-amd64.tar.gz
 helmfile_version: 0.119.1
 helmfile_url: https://github.com/roboll/helmfile/releases/download/v{{ helmfile_version }}/helmfile_linux_amd64
+bin_dir: /usr/local/bin
