--- a/roles/fish/tasks/main.yml
+++ b/roles/fish/tasks/main.yml
@@ -1,12 +1,6 @@
 ---
-- name: Add {{ role_name }} Debian repository
-  apt_repository:
-    repo: "{{ fish_repository }}"
-    update_cache: true
-
-- name: Install {{ role_name }}
-  apt:
-    package: "{{ fish_packages }}"
+- name: Install {{ role_name }} utilities repository
+  include_tasks: "{{ ansible_os_family | lower }}.yml"
 
 - name: Set as default shell
   user:
