Updated provision for Centos

--- a/roles/docker/tasks/main.yml
+++ b/roles/docker/tasks/main.yml
@@ -1,16 +1,6 @@
 ---
-- name: Add {{ role_name }} repository key
-  apt_key:
-    url: "{{ docker_deb_repository_key }}"
-
-- name: Install {{ role_name }} repository
-  apt_repository:
-    repo: "{{ docker_deb_repository }}"
-    update_cache: true
-
-- name: Install {{ role_name }} dependencies
-  apt:
-    package: docker-ce
+- name: Install {{ role_name }} utilities repository
+  include_tasks: "{{ ansible_os_family | lower }}.yml"
 
 - name: Install {{ role_name }} python packages
   pip:
