--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -1,5 +1,8 @@
 name: Skaffold Pipiline
-on: [push]
+on:
+  push:
+    branches:
+      - main
 env:
   DOCKER_REGISTRY: docker.pkg.github.com/hiberbee/ansible-collection-devops
 jobs:
