--- a/roles/docker/defaults/main.yml
+++ b/roles/docker/defaults/main.yml
@@ -1,14 +1,13 @@
-docker_deb_repository_key: "https://download.docker.com/linux/ubuntu/gpg"
-docker_deb_repository: "deb [arch=amd64] https://download.docker.com/linux/ubuntu focal stable"
+docker_version: 19.03.9
+docker_url: https://download.docker.com/linux/static/stable/x86_64/docker-{{ docker_version }}.tgz
 docker_registry_username: docker
 docker_registry_password: "{{ docker_registry_username }}"
 docker_registry_htpasswd: "{{ docker_registry_username }}:$2y$05$gHSPPUG5HCjVxfZD8RVc4OHBbMWnaJoboZBL9DuwBGBhUwZzDKQLG" # docker:docker
 docker_registry_htpasswd_path: "/root/.docker/htpasswd"
-docker_packages:
-  - docker-ce
 hadolint_version: 1.18.0
 hadolint_url: https://github.com/hadolint/hadolint/releases/download/v{{ hadolint_version }}/hadolint-Linux-x86_64
 docker_pip_dependencies:
   - docker
   - docker-compose
 docker_service_started: false
+bin_dir: /usr/local/bin
