--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -1,38 +1,14 @@
-name: Skaffold Pipiline
-on:
-  push:
-    branches:
-      - main
-env:
-  DOCKER_REGISTRY: docker.pkg.github.com/hiberbee/ansible-collection-devops
+name: Build workflow
+on: push
 jobs:
   build:
-    name: Build & Test Docker images
-    runs-on: ubuntu-latest
+    name: Build & test Docker images
+    runs-on: ubuntu-20.04
     steps:
       - name: Checkout repository sources
         uses: actions/checkout@v2
-
-      - name: Authenticate with Docker credentials
-        uses: azure/docker-login@v1
-        with:
-          login-server: $DOCKER_REGISTRY
-          username: ${{ github.actor }}
-          password: ${{ secrets.docker_password }}
-
-      - name: Get Skaffold version
-        uses: hiberbee/github-action-skaffold@master
-        with:
-          args: version
-          default-repo: $DOCKER_REGISTRY
-
       - name: Build Skaffold artifacts
         uses: hiberbee/github-action-skaffold@master
         with:
           args: build
-
-      - name: Test container structure
-        uses: hiberbee/github-action-skaffold@master
-        with:
-          entrypoint: container-structure-test
-          args: test --config container-structure-test.yaml --image skaffold
+          build-image: ubuntu
