--- a/roles/digitalocean/defaults/main.yml
+++ b/roles/digitalocean/defaults/main.yml
@@ -1,1 +1,3 @@
 digitalocean_version: 1.43.0
+digitalocean_url: https://github.com/digitalocean/doctl/releases/download/v{{ digitalocean_version }}/doctl-{{ digitalocean_version }}-linux-amd64.tar.gz
+bin_dir: /usr/local/bin
