--- a/roles/digitalocean/tasks/main.yml
+++ b/roles/digitalocean/tasks/main.yml
@@ -1,7 +1,7 @@
 ---
-- name: Install {{ role_name }} client
+- name: Install {{ role_name }} dependencies
   unarchive:
     remote_src: true
-    src: https://github.com/digitalocean/doctl/releases/download/v{{ digitalocean_version }}/doctl-{{ digitalocean_version }}-linux-amd64.tar.gz
-    dest: /usr/local/bin
-    creates: /usr/local/bin/doctl
+    src: "{{ digitalocean_url }}"
+    dest: "{{ bin_dir }}"
+    creates: "{{ bin_dir }}/doctl"
